# retrieval-evals

./: .gitignore  .pre-commit-config.yaml  README.md  arkhai_tests.dockerfile  pyproject.toml  test.txt
examples/: grounded.json  ungrounded.json
retrieval_evals/: __init__.py
retrieval_evals/evals/: __init__.py
retrieval_evals/evals/grounded/: __init__.py  base.py
retrieval_evals/evals/grounded/metrics/: __init__.py  answer_quality.py  base.py  bleu.py  exact_match.py  fact_matching.py  longqa_answer.py  meteor.py  morqa_faithfulness.py  rouge.py  semantic_similarity.py
retrieval_evals/evals/grounded/prompts/: answer_quality.txt  fact_extraction.txt  longqa_answer.txt  morqa_faithfulness.txt
retrieval_evals/evals/ungrounded/: __init__.py  base.py
retrieval_evals/evals/ungrounded/metrics/: __init__.py  answer_length.py  answer_structure.py  base.py  coherence.py  communication_quality.py  readability.py  style_consistency.py
retrieval_evals/evals/ungrounded/prompts/: answer_structure.txt  communication_quality.txt  style_consistency.txt
retrieval_evals/types/: __init__.py
tests/: __init__.py  test_evals.py  test_example.py  utils.py
tests/test_grounded/: __init__.py  test_base.py
tests/test_grounded/test_metrics/: __init__.py  test_answer_quality.py  test_exact_match.py  test_fact_matching.py  test_longqa_answer.py  test_morqa_faithfulness.py  test_semantic_similarity.py
tests/test_ungrounded/: __init__.py  test_base.py
tests/test_ungrounded/test_metrics/: __init__.py  test_answer_length.py  test_answer_structure.py  test_coherence.py  test_communication_quality.py  test_readability.py  test_style_consistency.py
